name:                CodingGame
version:             0.1.0.0
synopsis:            Solutions from codinggame.com
description:         Please see README.md
homepage:            https://github.com/alistair/CodingGame#readme
license:             BSD3
license-file:        LICENSE
author:              Alistair Bush
maintainer:          alistair.bush@gmail.com
copyright:           2016 Alistair Bush
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable CodingGame
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
